# FOOT

./: .gitignore  CMakeLists.txt  footSetup.csh  footSetup.sh  setupFOOT.csh  setupFOOT.csh.cmake  setupFOOT.sh  setupFOOT.sh.cmake
G4Simulation/: CMakeLists.txt  TAGsimulation.cxx
G4Simulation/TCBMbase/: CMakeLists.txt  TCBMgeometryConstructor.cxx  TCBMgeometryConstructor.hxx  TCBMsensitiveDetector.cxx  TCBMsensitiveDetector.hxx
G4Simulation/TCCAbase/: CMakeLists.txt  TCCAgeometryConstructor.cxx  TCCAgeometryConstructor.hxx  TCCAsensitiveDetector.cxx  TCCAsensitiveDetector.hxx
G4Simulation/TCEMbase/: CMakeLists.txt  TCEMfield.cxx  TCEMfield.hxx  TCEMfieldSetup.cxx  TCEMfieldSetup.hxx  TCEMgeometryConstructor.cxx  TCEMgeometryConstructor.hxx
G4Simulation/TCFObase/: CMakeLists.txt  TCFObaseEventAction.cxx  TCFObaseEventAction.hxx  TCFOeventAction.cxx  TCFOeventAction.hxx  TCFOeventoAction.cxx  TCFOeventoAction.hxx  TCFOfield.cxx  TCFOfield.hxx  TCFOgeometryConstructor.cxx  TCFOgeometryConstructor.hxx  TCFOmaterials.cxx  TCFOrunAction.cxx  TCFOrunAction.hxx  TCFOtrackingAction.cxx  TCFOtrackingAction.hxx
G4Simulation/TCGbase/: CMakeLists.txt  TCGbaseConstructor.cxx  TCGbaseConstructor.hxx  TCGbaseEventAction.cxx  TCGbaseEventAction.hxx  TCGbaseGeometryConstructor.cxx  TCGbaseGeometryConstructor.hxx  TCGbaseRunAction.cxx  TCGbaseRunAction.hxx  TCGbaseSensitiveDetector.cxx  TCGbaseSensitiveDetector.hxx  TCGmaterials.cxx  TCGmaterials.hxx  TCGmcHit.cxx  TCGmcHit.hxx  TCGphysicsQMD.cxx  TCGphysicsQMD.hxx  TCGprimaryGeneratorAction.cxx  TCGprimaryGeneratorAction.hxx  TCGtargetConstructor.cxx  TCGtargetConstructor.hxx
G4Simulation/TCITbase/: CMakeLists.txt  TCITgeometryConstructor.cxx  TCITgeometryConstructor.hxx  TCITsensitiveDetector.cxx  TCITsensitiveDetector.hxx
G4Simulation/TCMSDbase/: CMakeLists.txt  TCMSDgeometryConstructor.cxx  TCMSDgeometryConstructor.hxx  TCMSDsensitiveDetector.cxx  TCMSDsensitiveDetector.hxx
G4Simulation/TCSTbase/: CMakeLists.txt  TCSTgeometryConstructor.cxx  TCSTgeometryConstructor.hxx  TCSTsensitiveDetector.cxx  TCSTsensitiveDetector.hxx
G4Simulation/TCTWbase/: CMakeLists.txt  TCTWgeometryConstructor.cxx  TCTWgeometryConstructor.hxx  TCTWsensitiveDetector.cxx  TCTWsensitiveDetector.hxx
G4Simulation/TCVTbase/: CMakeLists.txt  TCVTgeometryConstructor.cxx  TCVTgeometryConstructor.hxx  TCVTsensitiveDetector.cxx  TCVTsensitiveDetector.hxx
G4Simulation/macros/: ReadG4.C  run.mac  vis.mac
Reconstruction/: CMakeLists.txt
Reconstruction/fullrec/: CMakeLists.txt  README  RecoTools.cc  RecoTools.h  RecoTools_copy.cc  RecoTools_copy.h
Reconstruction/fullrec/data/: NewDoubleDipole.table
Reconstruction/fullrec/macros/: PrintFlatNtuple.C  PrintFlatNtuple.C~  PrintFlatNtupleRaw.C  compile.sh  file_list.txt
Reconstruction/level0/: 25luglio.root  BaseLocalReco.cc  BaseLocalReco.h  CMakeLists.txt  DecodeData.cpp  DecodeMC.cc  DecodeMC_histo.root  DecodeRaw.cc  DecodedMC.root  FOOT.reg  FOOT_geo.map  LocalBM.root  LocalReco.LinkDef.h  LocalReco.cc  LocalReco.h  LocalRecoData.cc  LocalRecoData.h  LocalRecoMC.cc  LocalRecoMC.h  RecoL0.cc  RecoTools.LinkDef.h  RecoTools.cc  RecoTools.h  RecoTools_copy.cc  bField.test  footGeometry.root  genfitGeomFOOT.root  makefile  merge_bmtracks.sh  merge_project.sh  myLogin.csh  myLogin.sh  prova.root  strel_msdfiles.sh  strel_selfcalibration.sh
Reconstruction/level0/config/: Alignment_X_v34.root  Alignment_Y_v34.root  Cal_CentralSlats.root  Cal_Sweep.root  Cal_TofvsRuns_N30.root  Cal_postSweep.root  Cal_preSweep.root  FootGlobal.par  GeoConfig.par  SingleChannelCalib.root  T0_beammonitor.cfg  TAITdetector.cfg  TAMSDdetector.cfg  TATWCalibrationMap.xml  TATWChannelMap.xml  TATWdetector.cal  TAVTdetector.cal  TAVTdetector.cfg  TAVTdetector.map  TOFSlatSpeed.root  TOF_calib.txt  TOF_calib_Sweep.txt  TOF_calib_postSweep.txt  TW_Cal.root  TW_CalRaw.root  TW_Cal_postSweep.root  beammonitor.cfg  beammonitor_t0s.cfg  bmreso_vs_r.root  driftchamber.cfg  file_stlist_8020_Cst1_1750.txt  gsi_cosmici.cfg  gsi_emulsion.cfg  gsi_qdcpiedistalli_emulsion.cfg  spline_First_0340_test60_st0.root  spline_First_0340_test60_st1.root  spline_First_0340_test60_st2.root  spline_First_0340_test60_st3.root  spline_First_0340_test60_st4.root  spline_First_0340_test60_st5.root  (+22 more)
Reconstruction/level0/geomaps/: FIRST_June2011_twal.map  FIRST_geo.map  FIRST_geo_300.map  FOOT_geo.map  TABMdetector.map  TACAdetector.map  TADIdetector.map  TAGdetector.map  TAITdetector.map  TAMSDdetector.map  TATRdetector.map  TATWdetector.map  TAVTdetector.map  TAVTdetector_align126.map  TAVTdetector_revX.map  beammonitor_geoch.map  beammonitor_geoch_gsi.map  beammonitor_geoch_roma.map  beammonitor_geoch_trento_marzo2019.map  ir_ch.map  kentros_ch.map  s254_twal.map  tr_ch.map
Reconstruction/level0/macros/: BM_VTX_strel.C  BM_VTX_strel_func.cpp  BM_VTX_strel_main.cpp  BM_VTX_strel_main.h  DecodeMC.C  (+33 more)
Simulation/: CMakeLists.txt  CompileGeo.sh  DoubleGaussMag.table  Evento.cpp  Evento.h  FOOT_EMFon.inp  FOOT_lastGeoSanelli.geo  FOOT_new.flair  FOOT_new.geo  FOOT_new.inp  Geometry.cpp  Geometry.h  GeometryLinkDef.h  MagFieldMap.table  MagFieldMapRot.table  MagMapCreator.cpp  MagMapSum.cpp  MakeGeo.cxx  Makefile_geo  Segnale.cpp  Segnale.h  SummedSingleMap.table  SummedSingleMap_NoRot.table  SummedSingleMap_OnlySecondMagrot1.table  SummedSingleMap_SecondMagRot1.table  Txt2Root.cxx  foot.flair  foot.geo  foot.geo_original  foot.geonew  foot.inp  foot.reg  foot_geo.cc  foot_geo.h  link_FOOT.sh  link_FOOT_mag.sh  link_FOOTdev.sh  link_FOOTdev_mag.sh  makeGeo  parameters.inc
Simulation/ROUTINES/: UpdateCurrentParticle.f  magfld.f  mgdraw.f  mgdraw.inc  mgdraw_lib.f  parameters.inc  usrein.f  usreou.f  usrini.f  usrout.f
Simulation/SingleMagLPM10cm/: PMDIPFOOT_Single_8kGLPM10cm.table  PMDIPFOOT_Single_8kGLPM10cm.table~  Single.table
Simulation/TXT2ROOT/: EventStruct.h  Evento.cpp  Evento.h  Geometry.h  Helper.h  Makefile  Segnale.cpp  Segnale.h  Trigger.cpp  Trigger.h  Txt2Root.cpp  Txt2RootLinkDef.h  foot_geo.h  gsi_geo.h
libs/src/: CMakeLists.txt  Makefile
(+1008 files in other folders)
